# aiogram-pydantic-form-handler

./: '  .gitignore  :w  README.md  pyproject.toml  sr
.github/workflows/: ship.yml
docs/: README.md
docs/abstraction/: field-normalization.md  schema-states.md
docs/example/: README.md  enums-and-keyboard-items.md  runner.py
example/: README.md  README2.md  runner.py
pydantic_base_aiogram/: __init__.py  abstract_handler.py  dialecsts.py  exceptions.py  field_normalization.py  main.py  state_builder.py  types.py
pydantic_base_aiogram/controller/: __init__.py  abstract.py  base.py  bool.py  date.py  date_message_text.py  factory.py  file.py  float.py  optional_file.py  type_base_message_text.py
pydantic_base_aiogram/dynamic/: README.md  __init__.py  builder.py  field_metadata.py
pydantic_base_aiogram/dynamic_factory/: README.md  enums.py  handler.py  schema.py
pydantic_base_aiogram/field_factory/: __init__.py  base.py  field_factory.py  main.py  model.py  mult_single_splitter.py  union.py
pydantic_base_aiogram/utils/: abstractions.py  add_more_handlers.py  file.py  proxy_logger.py  reference_register.py  schema_states.py  state_builder.py
pydantic_base_aiogram/view/: abstract.py  base.py  bool.py  enum.py  factory.py  file.py  float.py  int.py  models.py  string.py
pydantic_handler_converter/: __init__.py  abstract_handler.py  abstract_view.py  base_field_factory.py  dialecsts.py  event.py  exceptions.py  main.py  state_builder.py  types.py  view.py
pydantic_handler_converter/controller/: __init__.py  abstract.py  base.py  bool.py  date.py  enum.py  (+3 more)
(+51 files in other folders)
