[tool.poetry]
name = "pydantic-base-aiogram"
version = "1.0.116"
description = "This code simplifies the conversion of Pydantic schemas into Aiogram handler groups, making it easy to create form-filling handlers."
authors = ["axdjuraev <axdjuraev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.10.4"
aiogram = "3.0.0b7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
